// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Popularity should generate report as expected, including dates 1`] = `
Object {
  "end": "Mon, 04 May 2020 16:02:52 GMT",
  "pivot": "Fri, 01 May 2020 16:02:52 GMT",
  "results": Array [
    Object {
      "abs_diff": 0,
      "diff": 0,
      "focus_count": 3,
      "focus_norm_count": 1,
      "ref_count": 2,
      "ref_norm_count": 1,
      "url": "url1",
    },
  ],
  "start": "Fri, 24 Apr 2020 16:02:52 GMT",
}
`;

exports[`Popularity should respect proportion between reference and focus period 1`] = `
Object {
  "abs_diff": 0,
  "diff": 0,
  "focus_count": 2,
  "focus_norm_count": 0.5,
  "ref_count": 4,
  "ref_norm_count": 0.5,
  "url": "url1",
}
`;

exports[`Popularity should respect proportion between reference and focus period 2`] = `
Object {
  "abs_diff": 0,
  "diff": 0,
  "focus_count": 4,
  "focus_norm_count": 0.5,
  "ref_count": 2,
  "ref_norm_count": 0.5,
  "url": "url1",
}
`;
